こまごまとした修正
git-svn-id: https://www.seasar.org/svn/mayaa/trunk/mayaa@2890 64d2bceb-c1f7-0310-a597-f30c3359d46a